fix: prevent sticky toolbar to overlap sticky section in Content Editor (#256)

--- a/src/javascript/RichTextCKEditor5/RichTextCKEditor5.scss
+++ b/src/javascript/RichTextCKEditor5/RichTextCKEditor5.scss
@@ -1,50 +1,6 @@
-:root {
-    --ck-inner-shadow: none;
-    --ck-focus-ring: 1px solid var(--color-accent_light);
-    --ck-border-radius: var(--radius-selector);
-
-    /* -- Overrides generic colors. ------------------------------------------------------------- */
-    --ck-content-font-color: var(--color-gray_dark);
-
-    --ck-color-base-background: var(--color-white);
-    --ck-color-base-border: var(--color-gray40);
-
-    --ck-color-focus-border: var(--color-accent_light);
-    --ck-color-text: var(--color-gray_dark);
-
-    /* -- Overrides the default .ck-button class colors. ---------------------------------------- */
-
-    --ck-color-button-default-hover-background: var(--color-gray_light_plain20);
-    --ck-color-button-default-active-background: var(--color-gray_light_plain60);
-
-    --ck-color-button-on-color: var(--color-accent_dark);
-    --ck-color-button-on-background: var(--color-accent_light_plain20);
-    --ck-color-button-on-hover-background: var(--color-accent_light_plain40);
-    --ck-color-button-on-active-background:var(--color-accent_light_plain60);
-
-    --ck-color-button-action-background: var(--color-accent);
-    --ck-color-button-action-hover-background: var(--color-accent_dark);
-    --ck-color-button-action-active-background: var(--color-accent_dark_contrast);
-
-    /* -- Overrides the default .ck-dropdown class colors. -------------------------------------- */
-
-    --ck-color-dropdown-panel-border: var(--border-selector);
-
-    --ck-color-list-background: var(--color-light);
-
-    /* -- Overrides the default .ck-balloon-panel class colors. --------------------------------- */
-
-    --ck-color-panel-border: var(--color-gray20);
-
-    /* -- Overrides the default .ck-toolbar class colors. --------------------------------------- */
-
-    --ck-color-toolbar-border: var(--color-gray20);
-
-    /* -- Overrides the default .ck-tooltip class colors. --------------------------------------- */
-
-    --ck-color-tooltip-background: var(--color-gray_dark);
-    --ck-color-tooltip-text: var(--color-light);
-}
+//--
+// Styles related to our CKEditor5 implementation
+//--
 
 .wrapper {
   overflow-y: scroll;
@@ -345,24 +301,4 @@
   iframe {
     border: 2px inset;
   }
-}
-
-// Manage read-only styles for CKEditor
-:global(.ck.ck-editor:has(.ck-read-only)) {
-  --ck-color-base-border: transparent;
-  --ck-base-background: transparent;
-}
-
-:global(.ck.ck-editor:has(.ck-read-only) .ck-editor__top) {
-    pointer-events: none;
-    opacity: .6;
-}
-
-:global(.ck.ck-editor .ck-content.ck-read-only) {
-  color: var(--color-gray_dark);
-
-  border-color: transparent;
-  background-color: var(--color-gray_light_plain40);
-  opacity: .8;
-  border-radius: var(--radius-selector);
 }
